tests/tests/snapshots/host_syntax_identity__identity_expr__sim-peripherals__NotifyUser.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(expr-stmt (email-send (field-access payload to) (field-access payload subject) (field-access payload body)))
(return (record-cons Ack (ok true)))
