tests/tests/snapshots/host_syntax_identity__identity_expr__sim-peripherals__RemoveDoc.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(expr-stmt (object-store-delete (field-access payload key)))
(return (record-cons Ack (ok true)))
